Added gitignore file

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,3 +1,9 @@
 <html>
-    <script src = 'build/path-morph.js'></script>
+    <script src = 'build/index.js'></script>
+
+    <body>
+        <svg width = 600 height = 600 ></svg>
+    </body>
+
+    <script src = 'example.js'></script>
 </html>
